<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetailActivity">

    <TextView
        android:id="@+id/txtProductDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_product_details"
        android:textAlignment="center"
        android:textColor="#E70000"
        android:textColorLink="#F44336"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtProductDetailsID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tilte_product_id" />

    <EditText
        android:id="@+id/edt_product_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtProductDetailsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_product_name" />

    <EditText
        android:id="@+id/edt_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtProductDetailsCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_product_code" />

    <EditText
        android:id="@+id/edt_product_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:id="@+id/txtProductDetailsUnitPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_product_unitprice" />

    <EditText
        android:id="@+id/edt_product_unitprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtImgLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_product_imglink" />

    <EditText
        android:id="@+id/edt_product_imglink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_new" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_save" />

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_remove" />
    </LinearLayout>

</LinearLayout>